Adding validation check to ensure a user is not deleted if they are team captain